# firstcrew

./: README.md  pyproject.toml  report.md
src/firstcrew/: crew.py  main.py
