[project]
name = "firstcrew"
version = "0.1.0"
description = "firstcrew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[anthropic,tools]==1.12.2",
]

[project.scripts]
firstcrew = "firstcrew.main:run"
run_crew = "firstcrew.main:run"
train = "firstcrew.main:train"
replay = "firstcrew.main:replay"
test = "firstcrew.main:test"
run_with_trigger = "firstcrew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
